tests/type/errors/bad_early_bind.xi
bar(a: int): int { return a }

foo() {
  a: int = bar(a) 
}
